# evolve_ai

./: .gitignore  Cargo.toml  LICENSE  README_EN.md  readme.md
git_syncer/: Cargo.toml
git_syncer/brain/code/rust/: keywords.ron  semantic_keywords.ron  type_mapping.ron
git_syncer/brain/commit/: examples.ron
git_syncer/brain/merge/: examples.ron
git_syncer/brain/pr/: examples.ron
git_syncer/brain/rebase/: examples.ron
git_syncer/brain/words/: common_english.ron
git_syncer/src/: cli.rs  main.rs
git_syncer/src/ai/: action.rs  ast.rs  brain.rs  coding.rs  diff_parser.rs  learning.rs  mod.rs  nlp.rs  runner.rs  semantics.rs  strategy.rs
git_syncer/src/all_access/: branch.rs  commit.rs  context.rs  fetch.rs  git_utils.rs  mod.rs  pull.rs  pull_request.rs  push.rs  sandbox_guard.rs  sync_action.rs
git_syncer/src/human/: mod.rs
git_syncer/src/main_content/: mod.rs
git_syncer/src/main_content/ai_main/: cli_main.rs  handle_ai_mode.rs  jobs.rs  log.rs  mod.rs  state.rs
orchestrator/: Cargo.toml
orchestrator/src/: agent_code_analysis.rs  agent_config.rs  agent_file_hashes.rs  agent_listing.rs  agent_needs.rs  agent_sanitizer.rs  agent_selection.rs  agent_structural_code.rs  agent_validator.rs  cargo_commands.rs  genetic_recombination.rs  genome.rs  genome_sync.rs  main.rs  manage_agents_commands.rs  project_paths.rs  scan_agents.rs  sys_commands.rs
orchestrator/src/monitoring/: mod.rs  resource_monitor.rs
orchestrator/src/notifications/: notifier.rs
orchestrator/src/pipelines/: initiate_project.rs  life_agent_after_init.rs  mod.rs  selection_life.rs
(+39 files in other folders)
