[package]
name = "git_syncer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
dialoguer = "0.11"
chrono = { version = "0.4", features = ["serde", "alloc"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
uuid = { version = "1", features = ["v4"] }
regex = "1.10"
rand = "0.8"
ron = "0.8"
syn = { version = "2", features = ["full", "visit"] }
ctrlc = "3"
rayon = "1"
serde_json = "1"
