[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
rand = "0.8"
bincode = "1.3"
md5 = "0.7"
sha2 = "0.10"
sysinfo = "0.29"
uuid = { version = "1.3", features = ["v7", "std"] }
ctrlc = "3"
rayon = "1.7"
parking_lot = "0.12"
